--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "firebase": "^7.24.0",
     "vue": "~2.6.11",
     "vue-router": "~3.3.2",
+    "vuefire": "^2.2.4",
+    "vuejs-datatable": "^2.0.0-alpha.7",
     "vuex": "~3.4.0"
   },
   "devDependencies": {
